--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Task Manager</h1>
 
-        <!-- Task Filter -->
+        <!-- Task Filter Options -->
         <label for="filter">Filter by Status:</label>
         <select id="filter">
             <option value="">All</option>
@@ -19,7 +19,7 @@
             <option value="completed">Completed</option>
         </select>
 
-        <!-- Task List -->
+        <!-- Task List After User Uploads Task -->
         <ul id="task-list"></ul>
 
         <!-- Add New Task Form -->
