--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager</title>
+    <title>mY Daily Task App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Task Manager</h1>
+        <h1>My Daily Taskr</h1>
 
         <!-- Task Filter Options -->
         <label for="filter">Filter by Status:</label>
